fixing padding on tablets and split screens

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -564,7 +564,7 @@ footer a:link, footer a:visited {
 
 @media (min-width: 750px) and (max-width: 970px) {
   #the-posts article {
-    padding:30px 0;
+    padding:30px;
     border-bottom:1px solid #BDC3C7;  
   }
   #list-nav {
